--- a/index.html
+++ b/index.html
@@ -338,7 +338,8 @@
   <body data-rsssl="1" data-cmplz="1">
     <div id="container">
       <div class="text" id="text">
-        <h2><b>Pedro Mines</b></h2>
+        <img src="/images/pedromines-logo.png" style="width: 60%;">
+        <!--<h2><b>Pedro Mines</b></h2> -->
         <!--<p>@seu.insta</p>-->
       </div>
       <div id="text">
