--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
         </p>
       </div>
       <div id="text">
-        <p id="text" class="text"><b>💣Apostar: </b><p id="mines">3</p> Minas</p>
+        <p id="text" class="text"><b>💣Apostar: </b><p id="minees">3</p> Minas</p>
       </div>
       <div class="game-container">
         <div class="initial-image"></div>
@@ -485,13 +485,13 @@
 
     function updateValues() {
       const acertoElement = document.getElementById('acerto');
-      const minesElement = document.getElementById('mines');
+      const minesElement = document.getElementById('minees');
 
       const randomPercentage = getRandomPercentage(98.5, 100);
       const randomMines = getRandomMines(3, 5);
 
       acertoElement.textContent = `${randomPercentage}%`;
-      minesElement.textContent = randomMines;
+      minesElement.textContent = `${randomMines}`;
     }
     updateValues();
 
